<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="music_item_menu">Music</string>
    <string name="my_device_group">My Devices</string>
    <string name="my_record_group">My Record</string>
    <string name="karaoke_group">Karaoke</string>
    <string name="list_karaoke_item_menu">Karaoke playlist</string>
    <string name="search_arirang_item_menu">Arirang</string>
    <string name="search_californial_item_menu">California</string>
    <string name="search_musiccore_item_menu">MusicCore</string>
    <string name="search_vietktv_item_menu">VietKtv</string>
    <string name="favorite_item_menu">Favorite</string>
    <string name="title_music_devices">My Devices - Music</string>
    <string name="title_karaoke_search">Karaoke - Search</string>
    <string name="title_karaoke_favorite">Karaoke - Favorite</string>
    <string name="title_karaoke_arirang">Chọn Vol đầu Arirang</string>
    <string name="title_language_karaoke">Chọn ngôn ngữ</string>
    <string name="intro_karaoke">Popular karaoke songs</string>
    <string name="rating_item_menu">Rating</string>
    <string name="font_icon_music">&#xf001;</string>
    <string name="font_icon_file_audio">&#xf1c7;</string>
    <string name="font_icon_sort">&#xf0dc;</string>
    <string name="font_icon_check">&#xf00c;</string>
    <string name="search_logo_karaoke">Search..</string>
    <string name="search_logo_song_devices">Search..</string>
    <string name="detail_lyric_label">Lời bài hát:</string>
    <string name="detail_author_label">Tác giả:</string>
    <string name="detail_machine_karaoke_label">Đầu karaoke:</string>
    <string name="detail_search_quickly_label">Tìm nhanh:</string>
    <string name="detail_favorite_label">Favorite:</string>
    <string name="LBL_SEND_EMAIL">Send Email</string>
    <string name="detail_label">Chi tiết</string>
    <string name="sort_vols">Vols</string>
    <string name="sort_language">Tiếng Việt</string>
    <string name="title_all">Tất cả</string>
    <string name="view_more">Xem thêm</string>
    <string name="no_song_favorite">Chưa có bài hát yêu thích</string>
    <string name="empty_song">Không có gợi ý lời cho bài này</string>
    <string-array name="language_karaoke_items">
        <item>Tiếng Việt</item>
        <item>Nước ngoài</item>
    </string-array>
    <string-array name="query_suggestions">
        <item>Android</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
    </string-array>
    <string name="app_name_short">kMP</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="now_playing">Now Playing List</string>
    <string name="all_songs">All Songs</string>
    <string name="settings">Settings</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="songs">Songs</string>
    <string name="end">Quit</string>
    <string name="menu_main_music">Music</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_shuffle">Shuffle All Songs</string>
    <string name="menu_main_now_playing">Now Playing</string>
    <string name="menu_main_scanning">Scanning songs on the device&#8230;</string>
    <string name="menu_main_scanning_ok">Finished scanning songs</string>
    <string name="menu_main_scanning_not_ok">Error while scanning songs</string>
    <string name="menu_main_back_to_exit">Press back again to exit</string>
    <string name="menu_music_playlists">Playlists</string>
    <string name="menu_music_artists">Artists</string>
    <string name="menu_music_songs">All Songs</string>
    <string name="menu_music_albums">Albums</string>
    <string name="menu_music_genres">Genres</string>
    <string name="menu_music_years">Years</string>
    <string name="menu_music_proceed_error"
        >Cannot proceed: I\'m scanning the device for songs.</string>
    <string name="notification_button_play">Play</string>
    <string name="notification_button_skip">Skip</string>
    <string name="menu_settings_themes_title"
        >Theme</string>
    <string name="menu_settings_themes_subtitle"
        >Colors used on the application.</string>
    <string name="menu_settings_lastfm_title"
        >Share songs on Last.fm</string>
    <string name="menu_settings_lastfm_subtitle"
        >You must have one of the apps below installed.</string>
    <string name="menu_settings_lastfm_which_title"
        >Last.fm Scrobbler</string>
    <string name="menu_settings_lastfm_which_subtitle"
        >Which application I\'ll use to scrobble to Last.fm (you have to install at least one of those).</string>
    <string name="menu_settings_show_notification_title"
        >Ongoing Notification</string>
    <string name="menu_settings_show_notification_subtitle"
        >Shows a system notification when I\'m playing a song. You can control the music player from there.</string>
    <string name="menu_settings_lock_widget_title"
        >Lockscreen Widget</string>
    <string name="menu_settings_lock_widget_subtitle"
        >Displays music controls on the locked screen.\nNote: Restart application to apply changes.</string>
    <string name="menu_settings_pause_headphone_off_title"
        >Pause when Unplugged</string>
    <string name="menu_settings_pause_headphone_off_subtitle"
        >Should I pause the music when the headphone is disconnected?</string>
    <string name="menu_settings_play_headphone_on_title"
        >Play when Inserted</string>
    <string name="menu_settings_play_headphone_on_subtitle"
        >Should I resume the music when the headphone is reconnected?</string>
    <string name="menu_settings_repeat_list_title"
        >Repeat when finished</string>
    <string name="menu_settings_repeat_list_subtitle"
        >When finishing the \"Now Playing List\", should I start it all over again?</string>
    <string name="menu_settings_scroll_on_focus_title"
        >Scroll when returning</string>
    <string name="menu_settings_scroll_on_focus_subtitle"
        >When returning to the \"Now Playing List\", should I scroll it to the currently playing song?</string>
    <string name="menu_settings_info_dialog_title"
        >Music Library Info</string>
    <string name="menu_settings_info_dialog_text"
        >%1$d songs\n%2$d albums\n%3$s artists\n%4$d playlists\n\nNext versions will have more stuff here.</string>
    <string name="menu_settings_misc_dialog_title"
        >Misc. Info</string>
    <string name="menu_settings_misc_dialog_text"
        >For now there\'s nothing here.\nPerhaps on a next version&#8230;</string>
    <string name="menu_settings_version_title">kMP Version</string>
    <string name="menu_settings_info_title">Music Library Info</string>
    <string name="menu_settings_misc_title">Misc. Info</string>
    <string name="menu_now_playing_action_bar_sort_title">Sort by Title</string>
    <string name="menu_now_playing_action_bar_sort_artist">Sort by Artist</string>
    <string name="menu_now_playing_action_bar_sort_album">Sort by Album</string>
    <string name="menu_now_playing_action_bar_sort_track">Sort by Track Number</string>
    <string name="menu_now_playing_action_bar_sort_random">Sort Randomly</string>
    <string name="menu_now_playing_action_bar_new_playlist">Create new Playlist</string>
    <string name="menu_now_playing_dialog_create_playlist_title">Name the new Playlist</string>
    <string name="menu_now_playing_dialog_create_playlist_subtitle">Enter a name for your new playlist</string>
    <string name="menu_now_playing_dialog_create_playlist_button_ok">OK</string>
    <string name="menu_now_playing_dialog_create_playlist_button_cancel">Cancel</string>
    <string name="menu_now_playing_dialog_create_playlist_success">Playlist %1$s successfully created</string>
    <string name="service_music_play_headphone_on">Headphone connected (%1$s)</string>
    <string name="service_music_play_headphone_off">Headphone disconnected</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string-array name="themes">
        <item>Device Default</item>
        <item>Light</item>
        <item>Dark</item>
        <item>Solarized Dark</item>
        <item>Wallpaper</item>
        <item>Dialog Light</item>
        <item>Dialog Dark</item>
        <item>Light (simple)</item>
        <item>Dark (simple)</item>
    </string-array>
    <string-array name="lastfm_which">
        <item>\"Simple Last.fm Scrobbler\"</item>
        <item>\"Scrobble Droid\"</item>
    </string-array>
    <string-array name="lastfm_which_values">
        <item>sls</item>
        <item>scrobbledroid</item>
    </string-array>
    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_genre_subtitle">Songs by genre</string>
    <string name="browse_musics_by_genre_subtitle">Album %1$s</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to connect to a Google Cast device</string>
    <string name="cast_application_id">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>
    <string name="placeholder_message">This is a placeholder for your application code.</string>
    <string name="drawer_allmusic_title">All Music</string>
    <string name="drawer_playlists_title">Playlists</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="search_queue_title">Search results</string>
    <string name="no_search_results">No search results.</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>
    <string-array name="sample_rate_text">
        <item>48 kHz</item>
        <item>44.1 kHz (CD)</item>
        <item>32 kHz</item>
        <item>22 kHz</item>
        <item>16 kHz (default)</item>
        <item>11 kHz</item>
        <item>8 kHz (telephone)</item>
    </string-array>
    <string-array name="sample_rate_values" translatable="false">
        <item>48000</item>
        <item>44100</item>
        <item>32000</item>
        <item>22050</item>
        <item>16000</item>
        <item>11025</item>
        <item>8000</item>
    </string-array>
    <string-array name="encodings_text">
        <item>.wav (default)</item>
        <item>.m4a</item>
    </string-array>
    <string name="record_list">Record list</string>
</resources>