<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_code_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="34012"
            android:textColor="@color/code_song_detail"
            android:textSize="@dimen/text_size_24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="1000 lý do anh đặt ra"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/secondary_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_author_label"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_author_label"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp"/>


                <TextView
                    android:id="@+id/tv_author_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="Vũ Quốc Bình"
                    android:textColor="@color/secondary_text_default_material_light"
                    android:textSize="@dimen/text_size_16sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_machine_karaoke_label"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_machine_karaoke_label"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp"/>


                <TextView
                    android:id="@+id/tv_machine_karaoke_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="Airang - Vol 31"
                    android:textColor="@color/secondary_text_default_material_light"
                    android:textSize="@dimen/text_size_16sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_search_quickly_label"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_search_quickly_label"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp"/>


                <TextView
                    android:id="@+id/tv_search_quickly_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="1gadsf"
                    android:textColor="@color/secondary_text_default_material_light"
                    android:textSize="@dimen/text_size_16sp"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_favorite_label"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_favorite_label"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp"/>


                <ImageView
                    android:id="@+id/img_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_favorite_grey_600_24dp"/>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/detail_lyric_label"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/tv_lyric_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Thôi nhắn tin làm chi nữa, giờ em đã hiểu trái tim anh.."
                android:textColor="@color/secondary_text_default_material_light"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="italic"/>

            <com.cc.ui.karaoke.ui.widget.VMUnderlineTextView
                android:id="@+id/tv_view_more"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="4dp"
                android:text="@string/view_more"
                android:textColor="@color/blue_200"
                android:textSize="@dimen/text_size_16sp"/>

            <Button
                android:id="@+id/bt_player"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Hát Karaoke"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text=""/>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_song_lyric"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>